# FECIC-Chess-OOP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: AssetManager.hpp  Board.hpp  Chess.hpp  Game.hpp  History.hpp  KillZone.hpp  Move.hpp  Preset.hpp  Replay.hpp  ThreadDispatcher.hpp  pch.hpp
include/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/Scenes/: Button.hpp  Scene.hpp  TextInput.hpp  Victory.hpp
include/Scenes/Chess/: Board.hpp  Chess.hpp  History.hpp  KillZone.hpp  Match.hpp  Move.hpp
include/Scenes/Chess/MatchResult/: MatchResult.hpp  StallMate.hpp  Victory.hpp
include/Scenes/Chess/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/Scenes/MainMenu/: Button.hpp  Logo.hpp  MainMenu.hpp
include/Scenes/MainMenu/Popup/: Play.hpp  Replay.hpp
include/Scenes/Replay/: ReplayPlayer.hpp
presets/: basic.board  basic1.board
src/: AssetManager.cpp  CMakeLists.txt  Chess.cpp  Game.cpp  History.cpp  KillZone.cpp  Move.cpp  Preset.cpp  Replay.cpp  ThreadDispatcher.cpp  main.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/Scenes/: Button.cpp  TextInput.cpp  Victory.cpp
src/Scenes/Chess/: Board.cpp  Chess.cpp  History.cpp  KillZone.cpp  Move.cpp
src/Scenes/Chess/MatchResult/: MatchResult.cpp  Victory.cpp
src/Scenes/Chess/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/Scenes/MainMenu/: Button.cpp  Logo.cpp  MainMenu.cpp
src/Scenes/MainMenu/Popup/: Play.cpp  Replay.cpp
src/Scenes/Replay/: ReplayPlayer.cpp
test/: CMakeLists.txt  test_preset.cpp  test_replay.cpp  tester.cpp
