cmake_minimum_required(VERSION 3.19)
project(Chess-FECIC VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall -g")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall -O3")
set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
SET(CPACK_ERROR_ON_ABSOLUTE_INSTALL_DESTINATION OFF)

set(CHESS_FECIC_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
set(CHESS_FECIC_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)

if(PACK)
    set(CHESS_FECIC_INSTALL_BIN_DIR bin)
else(PACK)
    set(CHESS_FECIC_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
endif(PACK)

message("include: ${CHESS_FECIC_INSTALL_INCLUDE_DIR}")

include(CTest)
enable_testing()

include_directories(${CHESS_FECIC_INSTALL_INCLUDE_DIR})

add_subdirectory(src)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
